# cpp-template

./: CMakeLists.txt
.github/workflows/: cmake.yml  codeql-analysis.yml
src/: main.cpp
